<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ghi</groupId>
    <artifactId>dbsyncer</artifactId>
	<version>1.1.2-Alpha</version>
    <packaging>pom</packaging>
    <name>dbsyncer</name>
    <url>https://gitee.com/ghi/dbsyncer</url>

    <!-- 管理的子模块(12个) -->
    <modules>
        <module>dbsyncer-biz</module>
        <module>dbsyncer-cache</module>
        <module>dbsyncer-cluster</module>
        <module>dbsyncer-common</module>
        <module>dbsyncer-connector</module>
        <module>dbsyncer-listener</module>
        <module>dbsyncer-manager</module>
        <module>dbsyncer-monitor</module>
        <module>dbsyncer-parser</module>
        <module>dbsyncer-plugin</module>
        <module>dbsyncer-storage</module>
        <module>dbsyncer-web</module>
    </modules>

    <!-- 全局参数版本 -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- maven 编译资源 版本 -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <!-- maven 编译目标版本  -->
        <maven.compiler.target>1.8</maven.compiler.target>
        <!-- maven 编译插件版本 -->
        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
        <java.version>1.8</java.version>
        <spring-boot.version>2.2.0.RELEASE</spring-boot.version>
        <commons-fileupload.version>1.4</commons-fileupload.version>
        <commons-io.version>2.5</commons-io.version>
        <lucene-analyzers-smartcn.version>7.7.0</lucene-analyzers-smartcn.version>
        <ojdbc6.version>11.2.0.4.0-atlassian-hosted</ojdbc6.version>
        <mysql.version>5.1.40</mysql.version>
        <mysql-binlog.version>0.21.0</mysql-binlog.version>
        <mssql-jdbc.version>8.2.0.jre8</mssql-jdbc.version>
        <json.version>20090211</json.version>
        <fastjson.version>1.2.75</fastjson.version>
        <junit.version>4.12</junit.version>
    </properties>

    <!-- 镜像仓库地址 -->
    <repositories>
        <!-- 阿里云仓库 -->
        <repository>
            <id>ali</id>
            <name>ali Repository</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <!-- 中央仓库1 -->
        <repository>
            <id>repo1</id>
            <name>Central Repository</name>
            <url>https://repo1.maven.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <!-- 中央仓库2 -->
        <repository>
            <id>repo2</id>
            <name>Central Repository</name>
            <url>https://repo2.maven.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

    </repositories>

    <!-- 统一管理第三方依赖jar -->
    <dependencyManagement>
        <dependencies>
            <!-- Import dependency management from Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Apache Commons 工具类 -->
            <dependency>
                <groupId>commons-fileupload</groupId>
                <artifactId>commons-fileupload</artifactId>
                <version>${commons-fileupload.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>

            <!-- json -->
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>${json.version}</version>
            </dependency>
            <!-- fastjson -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <!-- smartcn中文分词器 -->
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-analyzers-smartcn</artifactId>
                <version>${lucene-analyzers-smartcn.version}</version>
            </dependency>

            <!-- mysql-driver -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.version}</version>
            </dependency>

            <!-- oracle-driver -->
            <dependency>
                <groupId>com.oracle</groupId>
                <artifactId>ojdbc6</artifactId>
                <version>${ojdbc6.version}</version>
            </dependency>

            <!-- sqlserver-driver -->
            <dependency>
                <groupId>com.microsoft.sqlserver</groupId>
                <artifactId>mssql-jdbc</artifactId>
                <version>${mssql-jdbc.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.shyiko</groupId>
                <artifactId>mysql-binlog-connector-java</artifactId>
                <version>${mysql-binlog.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>